# learning-fastapi

./: Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 0994f987cbbe_add_users_table.py  1d7da2f9dc84_create_posts_table.py  895c7d8ec6ad_add_last_columns_to_posts_table.py  aa85dff765b8_auto_vote.py  af427bd03f14_add_content_column_to_posts_table.py  c8fedb11fbdc_add_foreign_key_to_posts_table.py
app/: database.py  main.py  models.py  oauth2.py
app/core/: config.py  oauth2.py
app/db/: database.py
app/models/: models.py
app/routers/: auth.py  post.py  user.py  vote.py
app/schemas/: schemas.py
app/tests/: conftest.py  test_posts.py  test_users.py
